--- a/k8s/helm/devops-app/values.yaml
+++ b/k8s/helm/devops-app/values.yaml
@@ -3,9 +3,12 @@ replicaCount: 3
 image:
   repository: asia-south1-docker.pkg.dev/durable-rhythm-465310-i5/apps/devops-app
   tag: "latest"
-  digest: "" 
+  digest: ""
+  pullPolicy: Always
 
 service:
   type: LoadBalancer
   port: 80
   targetPort: 8080
+
+resources: {}
